--- a/data/working_data/politics_data_raw.ipynb
+++ b/data/working_data/politics_data_raw.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 75,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 84,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,9 +328,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "      year    state         candidate                party  totalvotes  \\\n0     1976  Alabama             Other          prohibition     1182850   \n1     1976  Alabama     Carter, Jimmy             democrat     1182850   \n2     1976  Alabama      Ford, Gerald           republican     1182850   \n3     1976  Alabama             Other  communist party use     1182850   \n4     1976  Alabama             Other          libertarian     1182850   \n...    ...      ...               ...                  ...         ...   \n3361  2016  Wyoming             Other   constitution party      258788   \n3362  2016  Wyoming  Clinton, Hillary             democrat      258788   \n3363  2016  Wyoming             Other          libertarian      258788   \n3364  2016  Wyoming             Other              unknown      258788   \n3365  2016  Wyoming  Trump, Donald J.           republican      258788   \n\n      Eligible_voting_pop  electoralvotes  candidatevotes state_won_flag  \\\n0                     0.0             9.0            6669              0   \n1                     0.0             9.0          659170              1   \n2                     0.0             9.0          504070              0   \n3                     0.0             9.0            1954              0   \n4                     0.0             9.0            1481              0   \n...                   ...             ...             ...            ...   \n3361             429682.0             3.0            2042              0   \n3362             429682.0             3.0           55973              0   \n3363             429682.0             3.0           13287              0   \n3364             429682.0             3.0             278              0   \n3365             429682.0             3.0          174419              1   \n\n      percent_won  \n0            0.56  \n1           55.73  \n2           42.61  \n3            0.17  \n4            0.13  \n...           ...  \n3361         0.79  \n3362        21.63  \n3363         5.13  \n3364         0.11  \n3365        67.40  \n\n[3366 rows x 10 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>year</th>\n      <th>state</th>\n      <th>candidate</th>\n      <th>party</th>\n      <th>totalvotes</th>\n      <th>Eligible_voting_pop</th>\n      <th>electoralvotes</th>\n      <th>candidatevotes</th>\n      <th>state_won_flag</th>\n      <th>percent_won</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1976</td>\n      <td>Alabama</td>\n      <td>Other</td>\n      <td>prohibition</td>\n      <td>1182850</td>\n      <td>0.0</td>\n      <td>9.0</td>\n      <td>6669</td>\n      <td>0</td>\n      <td>0.56</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1976</td>\n      <td>Alabama</td>\n      <td>Carter, Jimmy</td>\n      <td>democrat</td>\n      <td>1182850</td>\n      <td>0.0</td>\n      <td>9.0</td>\n      <td>659170</td>\n      <td>1</td>\n      <td>55.73</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1976</td>\n      <td>Alabama</td>\n      <td>Ford, Gerald</td>\n      <td>republican</td>\n      <td>1182850</td>\n      <td>0.0</td>\n      <td>9.0</td>\n      <td>504070</td>\n      <td>0</td>\n      <td>42.61</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1976</td>\n      <td>Alabama</td>\n      <td>Other</td>\n      <td>communist party use</td>\n      <td>1182850</td>\n      <td>0.0</td>\n      <td>9.0</td>\n      <td>1954</td>\n      <td>0</td>\n      <td>0.17</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1976</td>\n      <td>Alabama</td>\n      <td>Other</td>\n      <td>libertarian</td>\n      <td>1182850</td>\n      <td>0.0</td>\n      <td>9.0</td>\n      <td>1481</td>\n      <td>0</td>\n      <td>0.13</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>3361</th>\n      <td>2016</td>\n      <td>Wyoming</td>\n      <td>Other</td>\n      <td>constitution party</td>\n      <td>258788</td>\n      <td>429682.0</td>\n      <td>3.0</td>\n      <td>2042</td>\n      <td>0</td>\n      <td>0.79</td>\n    </tr>\n    <tr>\n      <th>3362</th>\n      <td>2016</td>\n      <td>Wyoming</td>\n      <td>Clinton, Hillary</td>\n      <td>democrat</td>\n      <td>258788</td>\n      <td>429682.0</td>\n      <td>3.0</td>\n      <td>55973</td>\n      <td>0</td>\n      <td>21.63</td>\n    </tr>\n    <tr>\n      <th>3363</th>\n      <td>2016</td>\n      <td>Wyoming</td>\n      <td>Other</td>\n      <td>libertarian</td>\n      <td>258788</td>\n      <td>429682.0</td>\n      <td>3.0</td>\n      <td>13287</td>\n      <td>0</td>\n      <td>5.13</td>\n    </tr>\n    <tr>\n      <th>3364</th>\n      <td>2016</td>\n      <td>Wyoming</td>\n      <td>Other</td>\n      <td>unknown</td>\n      <td>258788</td>\n      <td>429682.0</td>\n      <td>3.0</td>\n      <td>278</td>\n      <td>0</td>\n      <td>0.11</td>\n    </tr>\n    <tr>\n      <th>3365</th>\n      <td>2016</td>\n      <td>Wyoming</td>\n      <td>Trump, Donald J.</td>\n      <td>republican</td>\n      <td>258788</td>\n      <td>429682.0</td>\n      <td>3.0</td>\n      <td>174419</td>\n      <td>1</td>\n      <td>67.40</td>\n    </tr>\n  </tbody>\n</table>\n<p>3366 rows × 10 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 87
+    }
+   ],
    "source": [
     "#merge dataframed for the state won flag\n",
     "\n",
@@ -343,18 +353,28 @@
     "state_winner_added.loc[state_winner_added[\"candidatedrop\"] != 0, [\"candidatedrop\"]] = '1'\n",
     "state_winner_added.loc[state_winner_added[\"candidatedrop\"] == 0, [\"candidatedrop\"]] = '0'\n",
     "\n",
-    "#math for % won\n",
-    "state_winner_added[\"percent_won\"] = state_winner_added[\"candidatevotes\"] / state_winner_added[\"totalvotes\"]\n",
-    "\n",
     "#drop and rename columns\n",
     "state_winner_added = state_winner_added.drop([\"yeardrop\",  \"candidatevotesdrop\", \"new\"], axis=1).rename(columns={\"candidatedrop\": \"state_won_flag\"})\n",
     "\n",
-    "final_df = state_winner_added"
+    "#math for % won\n",
+    "state_winner_added[\"percent_won\"] = (state_winner_added[\"candidatevotes\"] / state_winner_added[\"totalvotes\"] * 100).round(2)\n",
+    "\n",
+    "#for row in state_winner_added:\n",
+    " #   party = state_winner_added[\"party\"]\n",
+    "  #  state = state_winner_added[\"state_won_flag\"]\n",
+    "\n",
+    "   # if (party == \"democrat\") and (state == 1):\n",
+    "    #    state_winner_added.percent_won = state_winner_added.percent_won * -1\n",
+    "\n",
+    "\n",
+    "final_df = state_winner_added\n",
+    "\n",
+    "final_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,14 +387,12 @@
     "\n",
     "electoral_college[\"new\"] = electoral_college[\"candidate\"] + electoral_college[\"year\"].astype(str)\n",
     "\n",
-    "electoral_college_win = electoral_college.groupby(\"year\").head(2)\n",
-    "\n",
-    "\n"
+    "electoral_college_win = electoral_college.groupby(\"year\").head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +465,7 @@
     "\n",
     "final_df.to_csv(\"../final_data/state_level_data.csv\")\n",
     "vote.to_csv(\"../final_data/year_level_data.csv\")\n",
-    "final_df.to_csv(\"../final_data/turnout_data.csv\")"
+    "turnout.to_csv(\"../final_data/turnout_data.csv\")"
    ]
   },
   {
