--- a/data/working_data/politics_data_raw.ipynb
+++ b/data/working_data/politics_data_raw.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 65,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 74,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>year</th>\n      <th>state</th>\n      <th>candidate</th>\n      <th>party</th>\n      <th>totalvotes</th>\n      <th>Eligible_voting_pop</th>\n      <th>electoralvotes</th>\n      <th>candidatevotes</th>\n      <th>state_won_flag</th>\n      <th>percent_won</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1976</td>\n      <td>Alabama</td>\n      <td>Other</td>\n      <td>prohibition</td>\n      <td>1182850</td>\n      <td>0.0</td>\n      <td>9.0</td>\n      <td>6669</td>\n      <td>0</td>\n      <td>0.56</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1976</td>\n      <td>Alabama</td>\n      <td>Carter, Jimmy</td>\n      <td>democrat</td>\n      <td>1182850</td>\n      <td>0.0</td>\n      <td>9.0</td>\n      <td>659170</td>\n      <td>1</td>\n      <td>55.73</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1976</td>\n      <td>Alabama</td>\n      <td>Ford, Gerald</td>\n      <td>republican</td>\n      <td>1182850</td>\n      <td>0.0</td>\n      <td>9.0</td>\n      <td>504070</td>\n      <td>0</td>\n      <td>42.61</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1976</td>\n      <td>Alabama</td>\n      <td>Other</td>\n      <td>communist party use</td>\n      <td>1182850</td>\n      <td>0.0</td>\n      <td>9.0</td>\n      <td>1954</td>\n      <td>0</td>\n      <td>0.17</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1976</td>\n      <td>Alabama</td>\n      <td>Other</td>\n      <td>libertarian</td>\n      <td>1182850</td>\n      <td>0.0</td>\n      <td>9.0</td>\n      <td>1481</td>\n      <td>0</td>\n      <td>0.13</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>3361</th>\n      <td>2016</td>\n      <td>Wyoming</td>\n      <td>Other</td>\n      <td>constitution party</td>\n      <td>258788</td>\n      <td>429682.0</td>\n      <td>3.0</td>\n      <td>2042</td>\n      <td>0</td>\n      <td>0.79</td>\n    </tr>\n    <tr>\n      <th>3362</th>\n      <td>2016</td>\n      <td>Wyoming</td>\n      <td>Clinton, Hillary</td>\n      <td>democrat</td>\n      <td>258788</td>\n      <td>429682.0</td>\n      <td>3.0</td>\n      <td>55973</td>\n      <td>0</td>\n      <td>21.63</td>\n    </tr>\n    <tr>\n      <th>3363</th>\n      <td>2016</td>\n      <td>Wyoming</td>\n      <td>Other</td>\n      <td>libertarian</td>\n      <td>258788</td>\n      <td>429682.0</td>\n      <td>3.0</td>\n      <td>13287</td>\n      <td>0</td>\n      <td>5.13</td>\n    </tr>\n    <tr>\n      <th>3364</th>\n      <td>2016</td>\n      <td>Wyoming</td>\n      <td>Other</td>\n      <td>unknown</td>\n      <td>258788</td>\n      <td>429682.0</td>\n      <td>3.0</td>\n      <td>278</td>\n      <td>0</td>\n      <td>0.11</td>\n    </tr>\n    <tr>\n      <th>3365</th>\n      <td>2016</td>\n      <td>Wyoming</td>\n      <td>Trump, Donald J.</td>\n      <td>republican</td>\n      <td>258788</td>\n      <td>429682.0</td>\n      <td>3.0</td>\n      <td>174419</td>\n      <td>1</td>\n      <td>67.40</td>\n    </tr>\n  </tbody>\n</table>\n<p>3366 rows × 10 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 87
+     "execution_count": 77
     }
    ],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,9 +431,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "    year  totalvotes  Eligible_voting_pop  perc\n0   1976    81432514                  0.0   inf\n1   1980    86322962          157431825.0  0.55\n2   1984    92443573          164946657.0  0.56\n3   1988    91393948          170699171.0  0.54\n4   1992   104372208          176954186.0  0.59\n5   1996    96204092          183628183.0  0.52\n6   2000   105392088          191213067.0  0.55\n7   2004   122121864          199352847.0  0.61\n8   2008   131153400          208197066.0  0.63\n9   2012   128846233          217172515.0  0.59\n10  2016   136474612          225895098.0  0.60",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>year</th>\n      <th>totalvotes</th>\n      <th>Eligible_voting_pop</th>\n      <th>perc</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1976</td>\n      <td>81432514</td>\n      <td>0.0</td>\n      <td>inf</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1980</td>\n      <td>86322962</td>\n      <td>157431825.0</td>\n      <td>0.55</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1984</td>\n      <td>92443573</td>\n      <td>164946657.0</td>\n      <td>0.56</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1988</td>\n      <td>91393948</td>\n      <td>170699171.0</td>\n      <td>0.54</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1992</td>\n      <td>104372208</td>\n      <td>176954186.0</td>\n      <td>0.59</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>1996</td>\n      <td>96204092</td>\n      <td>183628183.0</td>\n      <td>0.52</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>2000</td>\n      <td>105392088</td>\n      <td>191213067.0</td>\n      <td>0.55</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>2004</td>\n      <td>122121864</td>\n      <td>199352847.0</td>\n      <td>0.61</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>2008</td>\n      <td>131153400</td>\n      <td>208197066.0</td>\n      <td>0.63</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>2012</td>\n      <td>128846233</td>\n      <td>217172515.0</td>\n      <td>0.59</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>2016</td>\n      <td>136474612</td>\n      <td>225895098.0</td>\n      <td>0.60</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 81
+    }
+   ],
    "source": [
     "turnout_votes = final_working_df[[\"year\", \"totalvotes\"]]\n",
     "turnout_eligible = final_working_df[[\"year\", \"Eligible_voting_pop\"]]\n",
@@ -452,12 +462,13 @@
     "turnout = turnout_votes.merge(turnout_eligible, how = \"left\", on=\"year\")\n",
     "turnout\n",
     "\n",
-    "turnout[\"perc\"] = turnout[\"totalvotes\"]/ turnout[\"Eligible_voting_pop\"].round(2)"
+    "turnout[\"perc\"] = (turnout[\"totalvotes\"]/ turnout[\"Eligible_voting_pop\"]).round(2)\n",
+    "turnout"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
